--- a/ps/style.css
+++ b/ps/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 .black {
-	background-color: black;
+	background-color: #49ADED;
 	padding: 10px;
 	text-align: center;
 	border-radius: 20px;
